@@ -7,21 +7,17 @@ nesting, you might want to see IO::Capture.
 
 What do I mean by nested capture? Here's an example:
 
-  use IO::NestedCapture ':constants';
+  use IO::NestedCapture ':subroutines';
   my $io = IO::String->new;
 
   IO::NestedCapture->set_next_out($io);
 
-  IO::NestedCapture->start(CAPTURE_STDOUT);
-  foo();
-  IO::NestedCapture->stop(CAPTURE_STDOUT);
+  capture_out \&foo;
 
   while (<$io>) { print ucfirst($_) }
 
   sub foo {
-    IO::NestedCapture->start(CAPTURE_STDOUT);
-    bar();
-    IO::NestedCapture->stop(CAPTURE_STDOUT);
+    capture_out \&bar;
 
     my $out = IO::NestedCapture->get_last_out;
     while (<$out>) { print lc($_) }
