@@ -3,9 +3,9 @@
 use strict;
 use warnings;
 
-use Test::More tests => 8;
+use Test::More tests => 27;
 
-use IO::NestedCapture ':constants';
+use IO::NestedCapture qw':constants :subroutines';
 
 my $capture = IO::NestedCapture->instance;
 
@@ -62,3 +62,36 @@ eval {
 };
 
 ok($@, "Not in use: $@");
+
+eval { capture_in { die "foo\n" }; };
+ok($@, "capture_in died: $@");
+is(tied *STDIN, undef);
+
+eval { capture_out { die "foo\n" }; };
+ok($@, "capture_out died: $@");
+is(tied *STDOUT, undef);
+
+eval { capture_err { die "foo\n" }; };
+ok($@, "capture_err died: $@");
+is(tied *STDERR, undef);
+
+eval { capture_in_out { die "foo\n" }; };
+ok($@, "capture_in_out died: $@");
+is(tied *STDIN, undef);
+is(tied *STDOUT, undef);
+
+eval { capture_in_err { die "foo\n" }; };
+ok($@, "capture_in_err died: $@");
+is(tied *STDIN, undef);
+is(tied *STDERR, undef);
+
+eval { capture_out_err { die "foo\n" }; };
+ok($@, "capture_out_err died: $@");
+is(tied *STDOUT, undef);
+is(tied *STDERR, undef);
+
+eval { capture_all { die "foo\n" }; };
+ok($@, "capture_all died: $@");
+is(tied *STDIN, undef);
+is(tied *STDOUT, undef);
+is(tied *STDERR, undef);
